     from `upsmon` which calls `upssched`) as an environment variable into
     the ultimately executed `CMDSCRIPT` processes. [#3105]

 - The `nut-driver-enumerator.sh` script (NDE) updates:
   * Revised info/error/warning/debug message emission so they go to `stderr`
     and have a consistent look. Revised some typos along the way. [issue #3194]

 - `configure` script options:
   * For ages, most recipes for building NUT had customized the `sysconfdir` to
     be `/etc/nut`, which is not exactly the *system* configuration directory.
     This is finally deprecated, with new `--with-confdir` configuration option
     taking over the role of a full path to configuration files (by default
     `${sysconfdir}${confdir_suffix}`), and new `--with-confdir-suffix` allowing
     to specify just `/nut` or `/ups` that would be tacked onto the default
     `${sysconfdir}` to resolve the `${confdir}`. Default behavior should be
     same as with previous builds: if `sysconfdir` is customized (or `prefix`
     is kept at built-in default), the `confdir_suffix` will default to empty;
     otherwise it assumes the value of `/${PACKAGE_NAME}` to become `/nut` in
     most cases. A `--with-confdir-examples` option was also introduced, to
     help distributions that place `*.conf.sample` files into docs or other
     locations. [#3131]
   * Introduced `--with-python{,2,3}-modules-dir` to specify PyNUT(Client)
     module installation location (for module-named dir to be created under
     it), if not bundling with NUT-Monitor UI app. By default the respective
     interpreter's 'site-packages' or 'dist-packages' location will be used,
     so you may have to adjust search paths for any other values. [#3062]
   * The script would now warn the caller if several different Python program
     paths or module locations were discovered (at least one automatically),
     in case this was not something the callers wanted -- just so they know.
     [#1792]