@@ -26,6 +26,12 @@ Changes from 2.8.4 to 2.8.5
 
 - PLANNED: Keep track of any further API clean-up?
 
+- Added a `configure` script option to `--enable-shared-private-libs` which
+  allows to deliver NUT common libraries as shared objects used by different
+  NUT binaries, rather than linking just the used bits into each binary.
+  This has some potential both for mayhem (so disabled by default) and
+  for significant reduction of installation footprint. [issue #2800]
+
 - For ages, most recipes for building NUT had customized the `sysconfdir` to
   be `/etc/nut`, which is not exactly the *system* configuration directory.
   This is finally deprecated, with new `--with-confdir` configuration option
