@@ -276,6 +276,11 @@ several `FSD` notifications into one executed action. [PR #3097]
      and have a consistent look. Revised some typos along the way. [issue #3194]
 
  - `configure` script options:
+   * Added an option to `--enable-shared-private-libs` to deliver NUT common
+     libraries as shared objects used by different NUT binaries, rather than
+     linking just the used bits into each binary. This has some potential
+     both for mayhem (so disabled by default) and for significant reduction
+     of installation footprint. [issue #2800]
    * For ages, most recipes for building NUT had customized the `sysconfdir` to
      be `/etc/nut`, which is not exactly the *system* configuration directory.
      This is finally deprecated, with new `--with-confdir` configuration option
